--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-pip==23.1.2
-beautifulsoup4==4.11.1
 boto3==1.28.45
 botocore==1.31.45
 Flask==2.2.2
 Flask_Cors==4.0.0
 googletrans==4.0.0rc1
-numpy==1.23.5
+numpy>=1.22,<1.24.3
+Pillow==9.4.0
 Requests==2.31.0
-summarizer==0.0.7
+tensorflow-intel==2.12.0
 tensorflow==2.12.0
-tensorflow_intel==2.12.0
 torch==2.0.1
-Requests==2.31.0
+torchvision==0.15.2
