--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ googletrans==4.0.0rc1
 numpy>=1.22,<1.24.3
 Pillow==9.4.0
 Requests==2.31.0
-tensorflow-intel==2.12.0
+tensorflow-intel
 tensorflow==2.12.0
 torch==2.0.1
 torchvision==0.15.2
